--- a/packages/tailwind/src/shared-styles.css
+++ b/packages/tailwind/src/shared-styles.css
@@ -25,6 +25,11 @@
   --color-chart-3: oklch(0.627 0.194 149.214);
   --color-chart-4: oklch(0.527 0.154 150.069);
   --color-chart-5: oklch(0.448 0.119 151.328);
+  --color-chart-blue-1: oklch(0.809 0.105 251.813);
+  --color-chart-blue-2: oklch(0.623 0.214 259.815);
+  --color-chart-blue-3: oklch(0.546 0.245 262.881);
+  --color-chart-blue-4: oklch(0.488 0.243 264.376);
+  --color-chart-blue-5: oklch(0.424 0.199 265.638);
   --color-sidebar: oklch(0.985 0 0);
   --color-sidebar-foreground: oklch(0.141 0.005 285.823);
   --color-sidebar-primary: oklch(0.648 0.2 131.684);
@@ -61,6 +66,11 @@
     --color-chart-3: oklch(0.627 0.194 149.214);
     --color-chart-4: oklch(0.527 0.154 150.069);
     --color-chart-5: oklch(0.448 0.119 151.328);
+    --color-chart-blue-1: oklch(0.809 0.105 251.813);
+    --color-chart-blue-2: oklch(0.623 0.214 259.815);
+    --color-chart-blue-3: oklch(0.546 0.245 262.881);
+    --color-chart-blue-4: oklch(0.488 0.243 264.376);
+    --color-chart-blue-5: oklch(0.424 0.199 265.638);
     --color-sidebar: oklch(0.21 0.006 285.885);
     --color-sidebar-foreground: oklch(0.985 0 0);
     --color-sidebar-primary: oklch(0.768 0.233 130.85);
